# ImageProcessor

./: CMakeLists.txt  FilterFactory.cpp  FilterFactory.h  ParsedString.cpp  ParsedString.h  Picture.cpp  Picture.h  Pixel.cpp  Pixel.h  image_processor.cpp
BMPStreams/: BMPReader.cpp  BMPReader.h  BMPWriter.cpp  BMPWriter.h
filters/: CropFilter.cpp  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayScaleFilter.cpp  GrayScaleFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegativeFilter.cpp  NegativeFilter.h  SharpeningFilter.cpp  SharpeningFilter.h  SquareFilter.cpp  SquareFilter.h
